force-app/main/default/objects/Stage_Waiting_Time__c/Stage_Waiting_Time__c.object-meta.xml
<CustomObject>
    <label>Aşama Bekleme Süresi</label>
    <pluralLabel>Aşama Bekleme Süreleri</pluralLabel>
    <nameField>
        <label>Kayıt No</label>
        <type>AutoNumber</type>
        <displayFormat>SWT-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tracks Case status transitions for SLA</description>
</CustomObject>