force-app/main/default/objects/Stage_Waiting_Time__c/fields/Change_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Change_DateTime__c</fullName>
    <label>Geçiş Zamanı</label>
    <type>DateTime</type>
    <required>true</required>
</CustomField>