force-app/main/default/objects/Stage_Waiting_Time__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <label>İlgili Vaka</label>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipName>Stage_Waiting_Times</relationshipName>
    <required>true</required>
</CustomField>