force-app/main/default/objects/Stage_Waiting_Time__c/fields/To_Status__c.field-meta.xml
<CustomField>
    <fullName>To_Status__c</fullName>
    <label>Yeni Durum</label>
    <type>Text</type>
    <length>50</length>
    <required>true</required>
</CustomField>